// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component does not render nested section components 1`] = `
<div
  class="Section"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Hello world.
    </div>
  </div>
</div>
`;

exports[`Section component renders a white section 1`] = `
<div
  class="Section Section--white"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Hello world.
    </div>
  </div>
</div>
`;

exports[`Section component renders as slim 1`] = `
<div
  class="Section Section--slim"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Hello world.
    </div>
  </div>
</div>
`;

exports[`Section component renders as with overflow visible 1`] = `
<div
  class="Section Section--overflow-visible"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Hey, I like to over flow.
    </div>
  </div>
</div>
`;

exports[`Section component renders correctly 1`] = `
<div
  class="Section"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Hello world.
    </div>
  </div>
</div>
`;

exports[`Section component renders with a custom className 1`] = `
<div
  class="test Section"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <h2
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
      >
        H2 Heading
      </h2>
      Hello world.
    </div>
  </div>
</div>
`;

exports[`Section component renders with a title 1`] = `
<div
  class="Section"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <h2
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
      >
        H2 Heading
      </h2>
      Hello world.
    </div>
  </div>
</div>
`;
